# anaconda-docker

./: .flake8  .pre-commit-config.yaml  Dockerfile  README.md  meta.yaml  pyproject.toml
environments/: development.yaml  production.yaml
src/: app.py
tests/: test_app.py
