[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
asyncio_mode="auto"
testpaths = [
    "tests/unit_tests",
    "tests/functional_tests",
    "tests/performance_tests",
]
addopts = "-rf -vv --cov=src/ --cov-report=term-missing"
